--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "react-boilerplate",
     "version": "0.0.0",
+    "browserslist": "last 2 version, not < 0.2%, not ie  <= 11, not dead, not android < 5, safari 11",
     "sideEffects": [
         "*.scss",
         "core-js/stable"
@@ -17,6 +18,7 @@
         "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@babel/preset-env": "^7.6.0",
         "@babel/preset-react": "^7.0.0",
+        "autoprefixer": "^9.6.1",
         "babel-eslint": "^10.0.3",
         "babel-loader": "^8.0.6",
         "classnames": "^2.2.6",
@@ -35,6 +37,7 @@
         "mini-css-extract-plugin": "^0.8.0",
         "ngrok": "^3.2.5",
         "node-sass": "^4.12.0",
+        "postcss-loader": "^3.0.0",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "sass-loader": "^8.0.0",
