--- a/package.json
+++ b/package.json
@@ -15,40 +15,46 @@
         "build": "webpack --mode production --config webpack.config.js"
     },
     "dependencies": {
-        "@babel/core": "^7.6.0",
-        "@babel/plugin-proposal-class-properties": "^7.5.5",
-        "@babel/preset-env": "^7.6.0",
-        "@babel/preset-react": "^7.0.0",
-        "autoprefixer": "^9.6.1",
-        "babel-eslint": "^10.0.3",
-        "babel-loader": "^8.0.6",
+        "@babel/core": "^7.9.0",
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/preset-env": "^7.9.0",
+        "@babel/preset-react": "^7.9.4",
+        "autoprefixer": "^9.7.5",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.1.0",
         "classnames": "^2.2.6",
         "clean-webpack-plugin": "^3.0.0",
         "compression": "^1.7.4",
-        "copy-webpack-plugin": "^5.0.4",
-        "core-js": "3.2.1",
-        "css-loader": "^3.2.0",
-        "eslint": "^6.4.0",
+        "copy-webpack-plugin": "^5.1.1",
+        "core-js": "3.6.4",
+        "css-loader": "^3.4.2",
+        "eslint": "^6.8.0",
         "eslint-plugin-babel": "^5.3.0",
-        "eslint-plugin-react": "^7.14.3",
-        "eslint-plugin-react-hooks": "^2.0.1",
+        "eslint-plugin-react": "^7.19.0",
+        "eslint-plugin-react-hooks": "^3.0.0",
         "express": "^4.17.1",
         "file-loader": "^4.2.0",
         "html-webpack-plugin": "^3.2.0",
-        "mini-css-extract-plugin": "^0.8.0",
-        "ngrok": "^3.2.5",
-        "node-sass": "^4.12.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "ngrok": "^3.2.7",
+        "node-sass": "^4.13.1",
         "postcss-loader": "^3.0.0",
-        "react": "^16.9.0",
-        "react-dom": "^16.9.0",
-        "sass-loader": "^8.0.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "sass-loader": "^8.0.2",
         "serve-static": "^1.14.1",
-        "uuid": "^3.3.3",
-        "webpack": "^4.40.2",
-        "webpack-cli": "^3.3.9",
-        "webpack-pwa-manifest": "^4.0.0",
-        "workbox-webpack-plugin": "^4.3.1",
-        "workbox-window": "^4.3.1"
+        "uuid": "^7.0.2",
+        "webpack": "^4.42.1",
+        "webpack-cli": "^3.3.11",
+        "webpack-pwa-manifest": "^4.2.0",
+        "workbox-cacheable-response": "^5.1.2",
+        "workbox-core": "^5.1.2",
+        "workbox-expiration": "^5.1.2",
+        "workbox-precaching": "^5.1.2",
+        "workbox-routing": "^5.1.2",
+        "workbox-strategies": "^5.1.2",
+        "workbox-webpack-plugin": "^5.1.2",
+        "workbox-window": "^5.1.2"
     },
     "author": "",
     "license": "ISC"
