--- a/package.json
+++ b/package.json
@@ -12,49 +12,52 @@
         "dev": "yarn start & webpack --watch --mode development --config webpack.config.js",
         "start": "node server.js",
         "lint": "eslint \"**/*.js\" --fix",
-        "build": "webpack --mode production --config webpack.config.js"
+        "build": "webpack --mode production --config webpack.config.js",
+        "lt": "lt --port 3000 --subdomain testypants"
     },
     "dependencies": {
-        "@babel/core": "^7.9.0",
-        "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/preset-env": "^7.9.0",
-        "@babel/preset-react": "^7.9.4",
-        "autoprefixer": "^9.7.5",
+        "@babel/core": "^7.12.10",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/preset-env": "^7.12.11",
+        "@babel/preset-react": "^7.12.10",
+        "@huth/random": "^1.0.0",
+        "autoprefixer": "^10.1.0",
         "babel-eslint": "^10.1.0",
-        "babel-loader": "^8.1.0",
+        "babel-loader": "^8.2.2",
         "classnames": "^2.2.6",
-        "clean-webpack-plugin": "^3.0.0",
         "compression": "^1.7.4",
-        "copy-webpack-plugin": "^5.1.1",
-        "core-js": "3.6.4",
-        "css-loader": "^3.4.2",
-        "eslint": "^6.8.0",
-        "eslint-plugin-babel": "^5.3.0",
-        "eslint-plugin-react": "^7.19.0",
-        "eslint-plugin-react-hooks": "^3.0.0",
+        "copy-webpack-plugin": "^7.0.0",
+        "core-js": "3.8.1",
+        "css-loader": "^5.0.1",
+        "eslint": "^7.16.0",
+        "eslint-plugin-babel": "^5.3.1",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-react-hooks": "^4.2.0",
         "express": "^4.17.1",
-        "file-loader": "^4.2.0",
-        "html-webpack-plugin": "^3.2.0",
-        "mini-css-extract-plugin": "^0.9.0",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.0.0-beta.1",
+        "localtunnel": "^2.0.0",
+        "mini-css-extract-plugin": "^1.3.3",
         "ngrok": "^3.2.7",
-        "node-sass": "^4.13.1",
-        "postcss-loader": "^3.0.0",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "sass-loader": "^8.0.2",
+        "node-sass": "^5.0.0",
+        "postcss-loader": "^4.1.0",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "sass-loader": "^10.1.0",
         "serve-static": "^1.14.1",
         "uuid": "^7.0.2",
-        "webpack": "^4.42.1",
-        "webpack-cli": "^3.3.11",
-        "webpack-pwa-manifest": "^4.2.0",
-        "workbox-cacheable-response": "^5.1.2",
-        "workbox-core": "^5.1.2",
-        "workbox-expiration": "^5.1.2",
-        "workbox-precaching": "^5.1.2",
-        "workbox-routing": "^5.1.2",
-        "workbox-strategies": "^5.1.2",
-        "workbox-webpack-plugin": "^5.1.2",
-        "workbox-window": "^5.1.2"
+        "webpack": "^5.11.0",
+        "webpack-cli": "^4.2.0",
+        "webpack-pwa-manifest": "^4.3.0",
+        "workbox-cacheable-response": "^6.0.2",
+        "workbox-core": "^6.0.2",
+        "workbox-expiration": "^6.0.2",
+        "workbox-precaching": "^6.0.2",
+        "workbox-routing": "^6.0.2",
+        "workbox-strategies": "^6.0.2",
+        "workbox-webpack-plugin": "^6.0.2",
+        "workbox-window": "^6.0.2"
     },
     "author": "",
     "license": "ISC"
