--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
         "workbox-routing": "^6.0.2",
         "workbox-strategies": "^6.0.2",
         "workbox-webpack-plugin": "^6.0.2",
-        "workbox-window": "^6.0.2"
+        "workbox-window": "^6.0.2",
+        "zustand": "^3.2.0"
     },
     "author": "",
     "license": "ISC"
