--- a/.eslintrc
+++ b/.eslintrc
@@ -121,7 +121,9 @@
             "never"
         ],
         "react-hooks/rules-of-hooks": "error",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "react/jsx-uses-react": "off",
+        "react/react-in-jsx-scope": "off"
     },
     "plugins": [
         "babel",
