--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
     "name": "react-boilerplate",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "browserslist": "last 2 version, not < 0.2%, not ie  <= 11, not dead, not android < 5, safari 11",
     "sideEffects": [
-        "*.scss",
-        "core-js/stable"
+        "*.scss"
     ],
     "description": "",
     "main": "index.js",
@@ -13,7 +12,13 @@
         "start": "node server.js",
         "lint": "eslint \"**/*.js\" --fix",
         "build": "webpack --mode production --config webpack.config.js",
-        "lt": "lt --port 3000 --subdomain testypants"
+        "lt": "lt --port 4000 --subdomain testypants"
+    },
+    "devDependencies": {
+        "compression": "^1.7.4",
+        "express": "^4.17.1",
+        "localtunnel": "^2.0.0",
+        "serve-static": "^1.14.1"
     },
     "dependencies": {
         "@babel/core": "^7.12.10",
@@ -26,28 +31,23 @@
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.2.2",
         "classnames": "^2.2.6",
-        "compression": "^1.7.4",
         "copy-webpack-plugin": "^7.0.0",
-        "core-js": "3.8.1",
         "css-loader": "^5.0.1",
         "eslint": "^7.16.0",
         "eslint-plugin-babel": "^5.3.1",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-react": "^7.21.5",
         "eslint-plugin-react-hooks": "^4.2.0",
-        "express": "^4.17.1",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.0.0-beta.1",
-        "localtunnel": "^2.0.0",
         "mini-css-extract-plugin": "^1.3.3",
-        "ngrok": "^3.2.7",
-        "node-sass": "^5.0.0",
-        "postcss-loader": "^4.1.0",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "sass-loader": "^10.1.0",
-        "serve-static": "^1.14.1",
-        "uuid": "^7.0.2",
+        "nanoid": "^4.0.0",
+        "node-sass": "^7.0.1",
+        "postcss-loader": "^7.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "sass-loader": "^13.0.0",
+        "uuid": "^8.3.2",
         "webpack": "^5.11.0",
         "webpack-cli": "^4.2.0",
         "webpack-pwa-manifest": "^4.3.0",
